src/objects/Shop_Product__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image_Path__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(IF(ISBLANK(Image_Path__c), &quot;https://semantic-ui.com/images/wireframe/image.png&quot;,  Image_Path__c), &quot;Image&quot;, 300, 450)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>8</defaultValue>
        <description>available for buy</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <description>total in werehouse</description>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;Other&quot;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Shop Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <columns>Total_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Type</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Type</label>
    </listViews>
    <nameField>
        <label>Shop Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>